Bluepad32 1.1.1 - 2022.04.18

* Fix compilation warnings

Bluepad32 1.1.0 - 2022.04.17

* Add Gamepad.getProperties() function
  Returns btaddress, vid/pid, and other useful properties

Bluepad32 1.0.0 - 2022.03.21

* Example: Supports multiple connected gamepads
* SPI Driver: Correctly parses variable-length responses

Bluepad32 0.99.4 - 2022.02.28

* Update library properties, CHANGELOG

Bluepad32 0.99.3 - 2022.02.27

* Example includes call to forgetBluetoothKeys()
* Remove BLUEPAD_LATEST_FIRMWARE_VERSION since it was outdated

Bluepad32 0.99.2 - 2022.01.07

* Compiles Ok in Arduino UNO WiFi Rev.2

Bluepad32 0.99.0 - 2021.07.17

* Initial public release
* Supports:
  * fetch all gamepad buttons/axis
  * allows setting rumble
  * allows setting players LED
  * allows setting color LED
* Supports the following NINA commands
  * check firmware version
  * diginal write
  * digital read
  * pin mode
  * set debug mode