@@ -1,5 +1,5 @@
 name=Bluepad32
-version=1.1.0
+version=1.1.1
 author=Ricardo Quesada
 maintainer=Ricardo Quesada <ricardoquesada@gmail.com>
 sentence=Enables gamepad support for NINA-based boards like the Nano RP2040 Connect, MKR WiFi 1010, MKR VIDOR 4000, UNO WiFi Rev.2 and Nano 33 IoT.
